--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
       <div class="btn-group btn-group-lg" role="group bg-white" style="border: #cccccc; font-family:Georgia, 'Times New Roman', Times, serif;">
         <button type="button" class="btn btn-outline-info"><a href="index.html">About</a></button>
+        <button type="button" class="btn btn-outline-info"><a href="pictures.html">Pictures</a></button>
         <button type="button" class="btn btn-outline-info"><a href="portfolio.html">Portfolio</a></button>
         <button type="button" class="btn btn-outline-info"><a href="contact.html">Contact</a></button>
       </div>
